--- a/deployments/example.yaml
+++ b/deployments/example.yaml
@@ -1,9 +1,5 @@
 config:
-  chain: example
   chain_id: 1
-  chain_type:
-    layer: 1
-    rollup_type: _
   dao:
     crv: '0xD533a949740bb3306d119CC777fa900bA034cd52'
     crvusd: '0xf939E0A03FB07F59A73314E73794Be0E57ac1b4E'
@@ -12,10 +8,13 @@ config:
     parameter_admin: '0x4EEb3bA4f221cA16ed4A0cC7254E2E32DF948c5f'
     vault: '0xD16d5eC345Dd86Fb63C6a9C43c517210F1027914'
   explorer_base_url: https://etherscan.io
+  layer: 1
   native_currency_coingecko_id: ethereum
   native_currency_symbol: ETH
+  network_name: example
   platform_coingecko_id: ethereum
   public_rpc_url: https://eth.llamarpc.com
+  rollup_type: _
   wrapped_native_token: '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'
 contracts:
   amm:
@@ -27,9 +26,10 @@ contracts:
           evm_version: shanghai
           optimisation_level: GAS
         constructor_args_encoded: 000000000000000000000000d16d5ec345dd86fb63c6a9c43c517210f102791400000000000000000000000000de89c733555886f785b0c32b498300297e481f
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/factory/factory_v_100.vy
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/stableswap/factory/factory_v_100.vy
+        contract_path: /contracts/amm/stableswap/factory/factory_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1722690816
+        deployment_timestamp: 1723247595
         deployment_type: normal
       implementation:
         address: '0x864C57A226c39F4cfC30A589B9198D583Ad6971a'
@@ -39,8 +39,9 @@ contracts:
           optimisation_level: CODESIZE
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
+        contract_path: /contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1722690812
+        deployment_timestamp: 1723247593
         deployment_type: blueprint
       math:
         address: '0x326B089670ba0E6700B1821c34d7b4Afddb11d1b'
@@ -50,8 +51,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
+        contract_path: /contracts/amm/stableswap/math/math_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1722690811
+        deployment_timestamp: 1723247593
         deployment_type: normal
       meta_implementation:
         address: '0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A'
@@ -61,8 +63,9 @@ contracts:
           optimisation_level: CODESIZE
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
+        contract_path: /contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1722690813
+        deployment_timestamp: 1723247594
         deployment_type: blueprint
       views:
         address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
@@ -72,8 +75,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
+        contract_path: /contracts/amm/stableswap/views/views_v_120.vy
         contract_version: 1.2.0
-        deployment_timestamp: 1722690812
+        deployment_timestamp: 1723247593
         deployment_type: normal
     tricryptoswap:
       factory:
@@ -83,9 +87,10 @@ contracts:
           evm_version: paris
           optimisation_level: GAS
         constructor_args_encoded: 000000000000000000000000d16d5ec345dd86fb63c6a9c43c517210f1027914
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/factory/factory_v_200.vy
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/tricryptoswap/factory/factory_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1722690819
+        deployment_timestamp: 1723247597
         deployment_type: normal
       implementation:
         address: '0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C'
@@ -95,8 +100,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1722690817
+        deployment_timestamp: 1723247596
         deployment_type: blueprint
       math:
         address: '0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7'
@@ -106,8 +112,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/math/math_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1722690816
+        deployment_timestamp: 1723247595
         deployment_type: normal
       views:
         address: '0xad9485a04927970E8448eB0DA2D2035FF22Ec546'
@@ -117,8 +124,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/views/views_v_200.vy
+        contract_path: /contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1722690817
+        deployment_timestamp: 1723247596
         deployment_type: normal
     twocryptoswap:
       factory:
@@ -128,9 +136,10 @@ contracts:
           evm_version: paris
           optimisation_level: GAS
         constructor_args_encoded: 000000000000000000000000d16d5ec345dd86fb63c6a9c43c517210f1027914
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/factory/factory_v_200.vy
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/twocryptoswap/factory/factory_v_200.vy
+        contract_path: /contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1722690821
+        deployment_timestamp: 1723247598
         deployment_type: normal
       implementation:
         address: '0xc321fb297739feBA3aB49987C758AD6463661B24'
@@ -140,8 +149,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
+        contract_path: /contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1722690820
+        deployment_timestamp: 1723247598
         deployment_type: blueprint
       math:
         address: '0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3'
@@ -151,8 +161,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6a6508e2cc2d40c34187d2db23792633c119c844/contracts/amm/twocryptoswap/math/math_v_210.vy
+        contract_path: /contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1722690819
+        deployment_timestamp: 1723247597
         deployment_type: normal
       views:
         address: '0x5169928944522977ee7F9968b9EaF6a5917b5B1F'
@@ -162,8 +173,9 @@ contracts:
           optimisation_level: GAS
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/views/views_v_200.vy
+        contract_path: /contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1722690819
+        deployment_timestamp: 1723247597
         deployment_type: normal
   gauge:
     child_gauge:
@@ -174,9 +186,10 @@ contracts:
           evm_version: paris
           optimisation_level: GAS
         constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob//contracts/gauge/child_gauge/factory/factory_v_100.vy
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/gauge/child_gauge/factory/factory_v_100.vy
+        contract_path: /contracts/gauge/child_gauge/factory/factory_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1722690806
+        deployment_timestamp: 1723247591
         deployment_type: normal
       implementation:
         address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
@@ -185,10 +198,12 @@ contracts:
           evm_version: paris
           optimisation_level: GAS
         constructor_args_encoded: 0000000000000000000000000880cf17bd263d3d3a5c09d2d86cceca3ccbd97c
-        contract_github_url: https://github.com/curvefi/curve-lite/blob//contracts/gauge/child_gauge/implementation/implementation_v_020.vy
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/65d63770a56f231e123c811eb734813156b9cc36/contracts/gauge/child_gauge/implementation/implementation_v_020.vy
+        contract_path: /contracts/gauge/child_gauge/implementation/implementation_v_020.vy
         contract_version: 0.2.0
-        deployment_timestamp: 1722690808
+        deployment_timestamp: 1723247591
         deployment_type: normal
+  governance: null
   helpers:
     deposit_and_stake_zap:
       address: '0x42BfAf1D3b0b40A6D8534376feF76DAE08d7Cb5A'
@@ -198,8 +213,9 @@ contracts:
         optimisation_level: GAS
       constructor_args_encoded: null
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
+      contract_path: /contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1722690822
+      deployment_timestamp: 1723247599
       deployment_type: normal
     rate_provider:
       address: '0x80183503F14FCe9fdd36E8461d0b48c39593D2F5'
@@ -208,9 +224,10 @@ contracts:
         evm_version: paris
         optimisation_level: GAS
       constructor_args_encoded: 000000000000000000000000b822167c7eeff0b53dcfdee2d8fe73dedb25505b
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/3be84d0a77b340f002f759131d0dfd2477f58ca9/contracts/helpers/rate_provider/rate_provider_v_100.vy
-      contract_version: 1.0.0
-      deployment_timestamp: 1722690824
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/30c8dc394ab187934f063ec545da48d5e4ac46db/contracts/helpers/rate_provider/rate_provider_v_101.vy
+      contract_path: /contracts/helpers/rate_provider/rate_provider_v_101.vy
+      contract_version: 1.0.1
+      deployment_timestamp: 1723247599
       deployment_type: normal
     router:
       address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
@@ -220,8 +237,9 @@ contracts:
         optimisation_level: GAS
       constructor_args_encoded: 000000000000000000000000c02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
+      contract_path: /contracts/helpers/router/router_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1722690811
+      deployment_timestamp: 1723247592
       deployment_type: normal
     stable_swap_meta_zap:
       address: '0xaCFbC7865EC1144773ba71C9E8b06dc945edd26B'
@@ -231,8 +249,9 @@ contracts:
         optimisation_level: GAS
       constructor_args_encoded: null
       contract_github_url: https://github.com/curvefi/curve-lite/blob/eb1dba99925e42e4f5320b8f032dbd0b24ff28d2/contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
+      contract_path: /contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1722690823
+      deployment_timestamp: 1723247599
       deployment_type: normal
   registries:
     address_provider:
@@ -242,9 +261,10 @@ contracts:
         evm_version: paris
         optimisation_level: GAS
       constructor_args_encoded: null
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/address_provider/address_provider_v_201.vy
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/address_provider/address_provider_v_201.vy
+      contract_path: /contracts/registries/address_provider/address_provider_v_201.vy
       contract_version: 2.0.1
-      deployment_timestamp: 1722690809
+      deployment_timestamp: 1723247592
       deployment_type: normal
     metaregistry:
       address: '0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1'
@@ -253,9 +273,10 @@ contracts:
         evm_version: paris
         optimisation_level: GAS
       constructor_args_encoded: 0000000000000000000000000880cf17bd263d3d3a5c09d2d86cceca3ccbd97cffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/metaregistry/metaregistry_v_110.vy
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/metaregistry/metaregistry_v_110.vy
+      contract_path: /contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1722690811
+      deployment_timestamp: 1723247592
       deployment_type: normal
       registry_handlers:
         stableswap:
@@ -266,8 +287,9 @@ contracts:
             optimisation_level: GAS
           constructor_args_encoded: 00000000000000000000000022bdac327bd8a73244769eb5cf7bf57552ddcbcb
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
+          contract_path: /contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1722690833
+          deployment_timestamp: 1723247608
           deployment_type: normal
         tricryptoswap:
           address: '0x4Bc555E718981beBF1d6d31abD66A10093f1A0AF'
@@ -277,8 +299,9 @@ contracts:
             optimisation_level: GAS
           constructor_args_encoded: 000000000000000000000000b372e22cc331980f8d5dbd955789e67420e0a53f
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
+          contract_path: /contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1722690835
+          deployment_timestamp: 1723247608
           deployment_type: normal
         twocryptoswap:
           address: '0xAD5C414cCf50D17AF7117Ab87729364bd23B83FE'
@@ -288,6 +311,7 @@ contracts:
             optimisation_level: GAS
           constructor_args_encoded: 0000000000000000000000003980f1806b55e38da48390fffbf2b2fefb329586
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
+          contract_path: /contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1722690835
+          deployment_timestamp: 1723247609
           deployment_type: normal
