--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^8.2.2"
 poetry = "^1.8.3"
 pydantic-settings = "^2.3.4"
 click = "^8.1.7"
+pydantic = "^2.8.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.4.2"
