--- a/settings/chains/example_taiko.yaml
+++ b/settings/chains/example_taiko.yaml
@@ -3,6 +3,10 @@ chain_id: 167000
 rollup_type: _
 dao:
   crv: "0x09413312b263fD252C16e592A45f4689F26cb79d"
+  emergency_admin: "0xA73EdCf18421B56D9AF1cE08A34E102E23b2C4B6"
+  ownership_admin: "0x6c9578402A3ace046A12839f45F84Aa5448E9c30"
+  parameter_admin: "0xEC5AFc9590964f2fA0FeED54f0fBB2A34480908D"
+  vault: "0x3c0a405E914337139992625D5100Ea141a9C4d11"
 explorer_base_url: https://taikoscan.io/
 
 # Not related to development, for further integrations
