--- a/settings/chains/taiko.yaml
+++ b/settings/chains/taiko.yaml
@@ -14,5 +14,5 @@ layer: 2
 native_currency_symbol: ETH
 native_currency_coingecko_id: ethereum
 platform_coingecko_id: ethereum
-public_rpc_url: https://rpc.taiko.xyz
+public_rpc_url: https://rpc.ankr.com/taiko
 wrapped_native_token: "0xA51894664A773981C6C112C43ce576f315d5b1B6"
