--- a/deployments/taiko.yaml
+++ b/deployments/taiko.yaml
@@ -10,6 +10,7 @@ config:
   explorer_base_url: https://taikoscan.io/
   file_name: taiko
   layer: 2
+  logo_url: https://i.ibb.co/F7pRXd1/Tko-256x256.png
   native_currency_coingecko_id: taiko
   native_currency_symbol: ETH
   network_name: taiko
