--- a/deployments/taiko.yaml
+++ b/deployments/taiko.yaml
@@ -2,7 +2,7 @@ config:
   chain_id: 167000
   dao:
     crv: "0x09413312b263fD252C16e592A45f4689F26cb79d"
-    crvusd: null
+    crvusd: "0xc8F4518ed4bAB9a972808a493107926cE8237068"
     emergency_admin: "0xA73EdCf18421B56D9AF1cE08A34E102E23b2C4B6"
     ownership_admin: "0x6c9578402A3ace046A12839f45F84Aa5448E9c30"
     parameter_admin: "0xEC5AFc9590964f2fA0FeED54f0fBB2A34480908D"
