--- a/settings/chains/devnet/hyperliquid_devnet.yaml
+++ b/settings/chains/devnet/hyperliquid_devnet.yaml
@@ -8,7 +8,7 @@ dao:
   ownership_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   parameter_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   vault: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
-explorer_base_url: https://waitingforexplorer.org # TODO: dummy explorer
+explorer_base_url: https://testnet.purrsec.com/
 
 # Not related to development, for further integrations
 layer: 1
