--- a/settings/chains/devnet/hyperliquid_devnet.yaml
+++ b/settings/chains/devnet/hyperliquid_devnet.yaml
@@ -20,3 +20,4 @@ reference_token_addresses:
   usdc: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   usdt: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   weth: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+multicall2: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
