--- a/deployments/debug/debug.yaml
+++ b/deployments/debug/debug.yaml
@@ -1,12 +1,12 @@
 config:
   chain_id: 998
   dao:
-    crv: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
-    crvusd: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
-    emergency_admin: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
-    ownership_admin: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
-    parameter_admin: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
-    vault: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
+    crv: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+    crvusd: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+    emergency_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+    ownership_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+    parameter_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+    vault: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   explorer_base_url: https://testnet.purrsec.com/
   file_name: devnet/hyperliquid_devnet
   layer: 1
@@ -15,16 +15,16 @@ config:
   network_name: hyperliquid
   public_rpc_url: https://api.hyperliquid-testnet.xyz/evm
   reference_token_addresses:
-    usdc: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
-    usdt: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
-    weth: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
+    usdc: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+    usdt: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
+    weth: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   rollup_type: _
-  wrapped_native_token: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
+  wrapped_native_token: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
 contracts:
   amm:
     stableswap:
       factory:
-        address: '0x22bDac327bD8a73244769EB5CF7bf57552DDcBcB'
+        address: "0x22bDac327bD8a73244769EB5CF7bf57552DDcBcB"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -36,7 +36,7 @@ contracts:
         deployment_timestamp: 1733165723
         deployment_type: normal
       implementation:
-        address: '0x864C57A226c39F4cfC30A589B9198D583Ad6971a'
+        address: "0x864C57A226c39F4cfC30A589B9198D583Ad6971a"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -48,7 +48,7 @@ contracts:
         deployment_timestamp: 1733165721
         deployment_type: blueprint
       math:
-        address: '0x326B089670ba0E6700B1821c34d7b4Afddb11d1b'
+        address: "0x326B089670ba0E6700B1821c34d7b4Afddb11d1b"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -60,7 +60,7 @@ contracts:
         deployment_timestamp: 1733165720
         deployment_type: normal
       meta_implementation:
-        address: '0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A'
+        address: "0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -72,7 +72,7 @@ contracts:
         deployment_timestamp: 1733165721
         deployment_type: blueprint
       views:
-        address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
+        address: "0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -85,7 +85,7 @@ contracts:
         deployment_type: normal
     tricryptoswap:
       factory:
-        address: '0xB372E22cC331980f8D5dbD955789e67420E0a53f'
+        address: "0xB372E22cC331980f8D5dbD955789e67420E0a53f"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -97,7 +97,7 @@ contracts:
         deployment_timestamp: 1733165726
         deployment_type: normal
       implementation:
-        address: '0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C'
+        address: "0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -109,7 +109,7 @@ contracts:
         deployment_timestamp: 1733165725
         deployment_type: blueprint
       math:
-        address: '0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7'
+        address: "0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -121,7 +121,7 @@ contracts:
         deployment_timestamp: 1733165724
         deployment_type: normal
       views:
-        address: '0xad9485a04927970E8448eB0DA2D2035FF22Ec546'
+        address: "0xad9485a04927970E8448eB0DA2D2035FF22Ec546"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -134,7 +134,7 @@ contracts:
         deployment_type: normal
     twocryptoswap:
       factory:
-        address: '0x3980F1806b55e38dA48390ffFbf2b2FEFB329586'
+        address: "0x3980F1806b55e38dA48390ffFbf2b2FEFB329586"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -146,7 +146,7 @@ contracts:
         deployment_timestamp: 1733165729
         deployment_type: normal
       implementation:
-        address: '0xc321fb297739feBA3aB49987C758AD6463661B24'
+        address: "0xc321fb297739feBA3aB49987C758AD6463661B24"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -158,7 +158,7 @@ contracts:
         deployment_timestamp: 1733165728
         deployment_type: blueprint
       math:
-        address: '0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3'
+        address: "0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -170,7 +170,7 @@ contracts:
         deployment_timestamp: 1733165727
         deployment_type: normal
       views:
-        address: '0x5169928944522977ee7F9968b9EaF6a5917b5B1F'
+        address: "0x5169928944522977ee7F9968b9EaF6a5917b5B1F"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -184,7 +184,7 @@ contracts:
   gauge:
     child_gauge:
       factory:
-        address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
+        address: "0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -196,7 +196,7 @@ contracts:
         deployment_timestamp: 1733165717
         deployment_type: normal
       implementation:
-        address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
+        address: "0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -210,7 +210,7 @@ contracts:
   governance: null
   helpers:
     deposit_and_stake_zap:
-      address: '0x42BfAf1D3b0b40A6D8534376feF76DAE08d7Cb5A'
+      address: "0x42BfAf1D3b0b40A6D8534376feF76DAE08d7Cb5A"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -222,7 +222,7 @@ contracts:
       deployment_timestamp: 1733165729
       deployment_type: normal
     rate_provider:
-      address: '0x80183503F14FCe9fdd36E8461d0b48c39593D2F5'
+      address: "0x80183503F14FCe9fdd36E8461d0b48c39593D2F5"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -234,7 +234,7 @@ contracts:
       deployment_timestamp: 1733165730
       deployment_type: normal
     router:
-      address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
+      address: "0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -246,7 +246,7 @@ contracts:
       deployment_timestamp: 1733165719
       deployment_type: normal
     stable_swap_meta_zap:
-      address: '0xaCFbC7865EC1144773ba71C9E8b06dc945edd26B'
+      address: "0xaCFbC7865EC1144773ba71C9E8b06dc945edd26B"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -259,7 +259,7 @@ contracts:
       deployment_type: normal
   registries:
     address_provider:
-      address: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
+      address: "0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -271,7 +271,7 @@ contracts:
       deployment_timestamp: 1733165718
       deployment_type: normal
     metaregistry:
-      address: '0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1'
+      address: "0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -284,7 +284,7 @@ contracts:
       deployment_type: normal
       registry_handlers:
         stableswap:
-          address: '0xc5c20213D4b52B092900254aFe21101764969F35'
+          address: "0xc5c20213D4b52B092900254aFe21101764969F35"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
@@ -296,7 +296,7 @@ contracts:
           deployment_timestamp: 1733165731
           deployment_type: normal
         tricryptoswap:
-          address: '0x4Bc555E718981beBF1d6d31abD66A10093f1A0AF'
+          address: "0x4Bc555E718981beBF1d6d31abD66A10093f1A0AF"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
@@ -308,7 +308,7 @@ contracts:
           deployment_timestamp: 1733165732
           deployment_type: normal
         twocryptoswap:
-          address: '0xAD5C414cCf50D17AF7117Ab87729364bd23B83FE'
+          address: "0xAD5C414cCf50D17AF7117Ab87729364bd23B83FE"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
